[project]
name = "goit-algo2-hw-10"
version = "0.1.0"
description = ""
authors = [
    {name = "DmytroVasylenko6",email = "tredstoun651@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
